header fix: width of surrounding div of main nav should not split into two lines anymore on mobile iOS

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8718,7 +8718,8 @@ header nav .nav_left .nav_groups {
   }
 
   header nav .nav_left {
-    width: 500px;
+    min-width: 500px;
+    width: auto;
   }
 
   header nav .nav_left .nav_semestr {
